index.html: Prevent category-edit-icon to overlap

--- a/inyoka_theme_default/static/style/inyoka/forum.less
+++ b/inyoka_theme_default/static/style/inyoka/forum.less
@@ -22,6 +22,10 @@
 
         font-size: @font-size-h3;
       }
+
+      &-category {
+        padding-right: @font-size-h3;
+      }
     }
     & > ul {
       &:extend(.list-group all);
